background: always pass a cancellable down to I/O operations

So they will be properly cancelled when the panel is disposed.
Also, check early if the operation was cancelled, since it's not safe to
assume the data of the callback is valid anymore before that point.

https://bugzilla.gnome.org/show_bug.cgi?id=672572